# JS_UDS_SYSTEM

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  doxy.conf  project.pro
JS_UDS_APP/: CMakeLists.txt  main.cpp  main.qml  mainwindow.cpp  qml.qrc
JS_UDS_LOGIC/: CMakeLists.txt  js_uds_logic.cpp  js_uds_logic.h  js_uds_logic_global.h
JS_UDS_TESTS/: CMakeLists.txt  tst_mainapplication.cpp
JS_UDS_UI/: AppConstants.h  CMakeLists.txt  JS_UDS_UI.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
JS_UDS_UI/Controls/: investigationbar.cpp  investigationbar.h  investigationbar.ui  investigationtypebar.cpp  investigationtypebar.h  investigationtypebar.ui  pumpcontrol.cpp  pumpcontrol.h  pumpcontrol.ui
JS_UDS_UI/DAQ/: connectionbar.cpp  connectionbar.h  readdata.cpp  readdata.h  writedata.cpp  writedata.h
JS_UDS_UI/Display/: footerdisplay.h  footerdisplay.ui  tracesdisplay.cpp  tracesdisplay.h  tracesdisplay.ui  valuedisplaybar.cpp  valuedisplaybar.h  valuedisplaybar.ui
JS_UDS_UI/Popups/: patientinfoentry.cpp  patientinfoentry.h  patientinfoentry.ui
JS_UDS_UI/application/: MainCodeLibs.pri  application.pro  main.cpp  mainwindow.cpp  mainwindow.h
JS_UDS_UI/applicationRunner/: applicationRunner.pro
JS_UDS_UI/applicationTests/: applicationTests.pro  main.cpp
JS_UDS_UI/stylesheets/: stc_styles.qss
docs/: _app_constants_8h_source.html  class_connection_bar-members.html  class_connection_bar.html  class_footer_display-members.html  class_footer_display.html  class_investigation_bar-members.html  class_main_window.html  class_patient_info_entry-members.html  class_pump_control-members.html  class_pump_control.html  class_q_c_p_abstract_paint_buffer-members.html  class_q_c_p_abstract_paint_buffer.html  class_q_c_p_abstract_plottable-members.html  class_q_c_p_abstract_plottable.html  class_q_c_p_abstract_plottable1_d-members.html  class_q_c_p_abstract_plottable1_d.html  class_q_c_p_axis.html  class_q_c_p_axis_painter_private.html  class_q_c_p_axis_rect-members.html  class_q_c_p_axis_rect.html  class_q_c_p_axis_ticker-members.html  class_q_c_p_axis_ticker_date_time-members.html  class_q_c_p_axis_ticker_fixed.html  class_q_c_p_axis_ticker_pi-members.html  class_q_c_p_axis_ticker_text.html  class_q_c_p_axis_ticker_time.html  class_q_c_p_bars_data.html  class_q_c_p_bars_group-members.html  class_q_c_p_bars_group.html  class_q_c_p_color_gradient.html  class_q_c_p_color_map-members.html  class_q_c_p_color_map.html  class_q_c_p_color_map_data-members.html  class_q_c_p_color_scale-members.html  class_q_c_p_color_scale_axis_rect_private-members.html  class_q_c_p_curve-members.html  class_q_c_p_curve_data-members.html  class_q_c_p_data_range-members.html  class_q_c_p_data_selection-members.html  class_q_c_p_data_selection.html  (+106 more)
docs/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_16.js  all_2.js  all_3.js  all_4.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_7.js  classes_9.js  classes_a.js  enumvalues_c.js  functions_0.js  functions_10.js  functions_11.js  functions_6.js  searchdata.js
instructions/: README.md
libcore/: libcore.pro
scripts/: app-run-mac.sh  build-mac.sh  build-project-mac.sh  run-mac.sh  tests-run-mac.sh
src/: AppConstants.h  JS_UDS_UI.pro  files.pri  main.cpp  mainwindow.cpp  mainwindow.h
src/DAQ/: connectionbar.h  (+8 more)
tests/: main.cpp  tests.pro  tst_smoke.cpp  tst_smoke.h
(+178 files in other folders)
